tests/baselines/reference/typeParameterWithInvalidConstraintType.errors.txt
tests/cases/compiler/typeParameterWithInvalidConstraintType.ts(1,19): error TS2313: Type parameter 'T' has a circular constraint.


==== tests/cases/compiler/typeParameterWithInvalidConstraintType.ts (1 errors) ====
    class A<T extends T> {
                      ~
!!! error TS2313: Type parameter 'T' has a circular constraint.
        foo() {
            var x: T;
            // no error expected below this line
            var a = x.foo();
            var b = new x(123);
            var c = x[1];
            var d = x();
        }
    }